// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddItemPopover calls addItems with multiple items on clicking Add button 1`] = `
<div>
  <EuiPopover
    anchorPosition="downCenter"
    button={
      <EuiButton
        color="primary"
        fill={false}
        iconSide="right"
        iconType="arrowDown"
        isDisabled={false}
        onClick={[Function]}
        size="s"
        type="button"
      >
        <FormattedMessage
          defaultMessage="Add item"
          id="xpack.ml.settings.filterLists.addItemPopover.addItemButtonLabel"
          values={Object {}}
        />
      </EuiButton>
    }
    closePopover={[Function]}
    hasArrow={true}
    id="add_item_popover"
    isOpen={false}
    ownFocus={true}
    panelClassName="ml-add-filter-item-popover"
    panelPaddingSize="m"
  >
    <EuiForm>
      <EuiFormRow
        describedByIds={Array []}
        fullWidth={false}
        hasEmptyLabelSpace={false}
        label={
          <FormattedMessage
            defaultMessage="Items"
            id="xpack.ml.settings.filterLists.addItemPopover.itemsLabel"
            values={Object {}}
          />
        }
      >
        <EuiTextArea
          fullWidth={false}
          onChange={[Function]}
          resize="vertical"
          value=""
        />
      </EuiFormRow>
    </EuiForm>
    <EuiText
      grow={true}
      size="xs"
    >
      <FormattedMessage
        defaultMessage="Enter one item per line"
        id="xpack.ml.settings.filterLists.addItemPopover.enterItemPerLineDescription"
        values={Object {}}
      />
    </EuiText>
    <EuiSpacer
      size="s"
    />
    <EuiFlexGroup
      alignItems="stretch"
      component="div"
      direction="row"
      gutterSize="l"
      justifyContent="flexEnd"
      responsive={true}
      wrap={false}
    >
      <EuiFlexItem
        component="div"
        grow={false}
      >
        <EuiButton
          color="primary"
          disabled={true}
          fill={false}
          iconSide="left"
          onClick={[Function]}
          type="button"
        >
          <FormattedMessage
            defaultMessage="Add"
            id="xpack.ml.settings.filterLists.addItemPopover.addButtonLabel"
            values={Object {}}
          />
        </EuiButton>
      </EuiFlexItem>
    </EuiFlexGroup>
  </EuiPopover>
</div>
`;

exports[`AddItemPopover opens the popover onButtonClick 1`] = `
<div>
  <EuiPopover
    anchorPosition="downCenter"
    button={
      <EuiButton
        color="primary"
        fill={false}
        iconSide="right"
        iconType="arrowDown"
        isDisabled={false}
        onClick={[Function]}
        size="s"
        type="button"
      >
        <FormattedMessage
          defaultMessage="Add item"
          id="xpack.ml.settings.filterLists.addItemPopover.addItemButtonLabel"
          values={Object {}}
        />
      </EuiButton>
    }
    closePopover={[Function]}
    hasArrow={true}
    id="add_item_popover"
    isOpen={true}
    ownFocus={true}
    panelClassName="ml-add-filter-item-popover"
    panelPaddingSize="m"
  >
    <EuiForm>
      <EuiFormRow
        describedByIds={Array []}
        fullWidth={false}
        hasEmptyLabelSpace={false}
        label={
          <FormattedMessage
            defaultMessage="Items"
            id="xpack.ml.settings.filterLists.addItemPopover.itemsLabel"
            values={Object {}}
          />
        }
      >
        <EuiTextArea
          fullWidth={false}
          onChange={[Function]}
          resize="vertical"
          value=""
        />
      </EuiFormRow>
    </EuiForm>
    <EuiText
      grow={true}
      size="xs"
    >
      <FormattedMessage
        defaultMessage="Enter one item per line"
        id="xpack.ml.settings.filterLists.addItemPopover.enterItemPerLineDescription"
        values={Object {}}
      />
    </EuiText>
    <EuiSpacer
      size="s"
    />
    <EuiFlexGroup
      alignItems="stretch"
      component="div"
      direction="row"
      gutterSize="l"
      justifyContent="flexEnd"
      responsive={true}
      wrap={false}
    >
      <EuiFlexItem
        component="div"
        grow={false}
      >
        <EuiButton
          color="primary"
          disabled={true}
          fill={false}
          iconSide="left"
          onClick={[Function]}
          type="button"
        >
          <FormattedMessage
            defaultMessage="Add"
            id="xpack.ml.settings.filterLists.addItemPopover.addButtonLabel"
            values={Object {}}
          />
        </EuiButton>
      </EuiFlexItem>
    </EuiFlexGroup>
  </EuiPopover>
</div>
`;

exports[`AddItemPopover renders the popover 1`] = `
<div>
  <EuiPopover
    anchorPosition="downCenter"
    button={
      <EuiButton
        color="primary"
        fill={false}
        iconSide="right"
        iconType="arrowDown"
        isDisabled={false}
        onClick={[Function]}
        size="s"
        type="button"
      >
        <FormattedMessage
          defaultMessage="Add item"
          id="xpack.ml.settings.filterLists.addItemPopover.addItemButtonLabel"
          values={Object {}}
        />
      </EuiButton>
    }
    closePopover={[Function]}
    hasArrow={true}
    id="add_item_popover"
    isOpen={false}
    ownFocus={true}
    panelClassName="ml-add-filter-item-popover"
    panelPaddingSize="m"
  >
    <EuiForm>
      <EuiFormRow
        describedByIds={Array []}
        fullWidth={false}
        hasEmptyLabelSpace={false}
        label={
          <FormattedMessage
            defaultMessage="Items"
            id="xpack.ml.settings.filterLists.addItemPopover.itemsLabel"
            values={Object {}}
          />
        }
      >
        <EuiTextArea
          fullWidth={false}
          onChange={[Function]}
          resize="vertical"
          value=""
        />
      </EuiFormRow>
    </EuiForm>
    <EuiText
      grow={true}
      size="xs"
    >
      <FormattedMessage
        defaultMessage="Enter one item per line"
        id="xpack.ml.settings.filterLists.addItemPopover.enterItemPerLineDescription"
        values={Object {}}
      />
    </EuiText>
    <EuiSpacer
      size="s"
    />
    <EuiFlexGroup
      alignItems="stretch"
      component="div"
      direction="row"
      gutterSize="l"
      justifyContent="flexEnd"
      responsive={true}
      wrap={false}
    >
      <EuiFlexItem
        component="div"
        grow={false}
      >
        <EuiButton
          color="primary"
          disabled={true}
          fill={false}
          iconSide="left"
          onClick={[Function]}
          type="button"
        >
          <FormattedMessage
            defaultMessage="Add"
            id="xpack.ml.settings.filterLists.addItemPopover.addButtonLabel"
            values={Object {}}
          />
        </EuiButton>
      </EuiFlexItem>
    </EuiFlexGroup>
  </EuiPopover>
</div>
`;
